# immunex

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: approved_drugs_reference.json  chembl_innate_immune.json  innatedb_interactions.json  reactome_pathways.json
docs/: ARCHITECTURE.md
results/: demo_inflammasome_scan.json  scan_cgas_sting.json  scan_complement.json  scan_jak_stat.json  scan_nfkb.json  scan_tlr_signaling.json  scan_trained_immunity.json
scripts/: fetch_data.py
src/: __init__.py  pipeline.py
src/agents/: __init__.py  hypothesis_generator.py  literature_scanner.py  molecular_reasoner.py  safety_validator.py
src/api/: __init__.py  server.py
src/knowledge_graph/: __init__.py  builder.py
src/models/: __init__.py  embeddings.py  gnn.py
src/utils/: __init__.py  chembl.py  drugbank.py  faers.py  pubmed.py
tests/: test_knowledge_graph.py  test_literature_scanner.py
